# agent-rules-sync

./: .gitignore  AGENT_FILE_RELOAD.md  BACKUPS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  PRE_RELEASE_CHECKLIST.md  QUICKSTART.md  README.md  REVIEW_REPORT.md  SETTINGS_REFERENCE.md  SETTINGS_SYNC_TODO.md  UPGRADE_VERIFICATION.md  agent_antigravity_cli.py  agent_exclusions.py  agent_guardian.py  agent_history_sync.py  agent_mcp_sync.py  agent_rules_sync.py  agent_settings_sync.py  agent_skills_sync.py  agent_sync_config.py  install_daemon.py  pyproject.toml  requirements.txt  setup.py  skills-lock.json  test_agent_rules_sync.py  uninstall.py  uninstall.sh
.agents/audit/: 2026-05-15-opencode.jsonl
.agents/plugins/: marketplace.json
.antigravitycli/: b5db8042-2d4c-415b-9b3e-5d9303c1d322.json
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
.serena/: project.yml
docs/: FIXES_SUMMARY.md  RELEASE_v1.2.3.md  SKILLS_SYNC_RESEARCH.md
docs/launchd/: README.md  com.local.agent-rules-sync.plist.template  run-watch-foreground.example.py
docs/plans/: 2026-01-28-rule-management-design.md  2026-01-28-rule-management-implementation.md
tests/: test_agent_history_sync.py  test_agent_mcp_sync.py  test_agent_rules_sync.py  test_agent_rules_sync_integration.py  test_agent_skills_sync.py  test_agent_sync_config.py  test_migration.py  test_windows_daemon.py
youtube_history_sync/: README.md  browser_history.py  chrome_history.py  com.youtube.history.sync.plist  webhook_history.py  youtube_tracker.user.js  ytdlp_history.py
(+15 files in other folders)
